Integrate with OpenID Connect Provider plugin